--- a/src/app.css
+++ b/src/app.css
@@ -22,38 +22,38 @@ h3 {
     font-size: 1.5rem;
 }
 
-table {
+table.data-table {
     border-collapse: collapse;
     margin: 1rem;
-}
 
-td {
-    border: 1px solid #ddd;
-    padding: .5rem;
-}
+    & td {
+        border: 1px solid #ddd;
+        padding: .5rem;
+    }
 
-th {
-    background-color: #04AA6D;
-    color: white;
-    font-weight: bold;
-    padding: 12px;
-    text-align: left;
-}
+    & th {
+        background-color: #04AA6D;
+        color: white;
+        font-weight: bold;
+        padding: 12px;
+        text-align: left;
+    }
 
-tbody>tr {
-    cursor: pointer;
-}
+    & tbody > tr {
+        cursor: pointer;
+    }
 
-tbody>tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
+    & tbody > tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
 
-tbody>tr:hover {
-    background-color: #ddd;
-}
+    & tbody > tr:hover {
+        background-color: #ddd;
+    }
 
-tbody>tr.active {
-    background-color: gold;
+    & tbody > tr.active {
+        background-color: gold;
+    }
 }
 
 li {
@@ -63,3 +63,8 @@ li {
 li.active {
     background-color: lightcyan;
 }
+
+ input {
+     background-color: white;
+     margin: 0 1rem 2rem 0;
+ }
