--- a/src/app.css
+++ b/src/app.css
@@ -74,19 +74,52 @@ li.active {
     max-width: 50rem; /* Constrain the table width*/
 }
 
+.row-centered {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    grid-column: span 2;
+}
+
 .form-grid-container label {
     text-align: right; /* Aligns labels to the right side of their column */
 }
 
 .form-grid-container label span.required {
-    color : #ff0000;
+    color: #ff0000;
     margin-right: 0.5rem;
 }
 
-.form-grid-container input {
+.form-grid-container input:not(.submit) {
     width: 100%;
     box-sizing: border-box; /* Ensures padding/border are included in the 100% width */
     background-color: white;
+
+    &:read-only {
+        background-color: #ddd;
+        cursor: not-allowed;
+    }
+}
+
+.form-grid-container input.submit {
+    box-sizing: border-box; /* Ensures padding/border are included in the 100% width */
+    background-color: white;
+    padding: 0.5rem 1rem;
+    grid-column: span 2;
+    font-weight: bold;
+    border: 2px solid black;
+    border-radius: 12px; /* Adjust the value for desired roundness */
+
+    &:disabled {
+        cursor: not-allowed;
+        background-color: #cccccc; /* Custom background color */
+        color: #666666;             /* Custom text color */
+    }
+
+    &:hover:not(:disabled)  {
+        background-color: lightgray;
+    }
 }
 
 .form-grid-container textarea {
