--- a/src/app/shared/nav-bar/navBar.css
+++ b/src/app/shared/nav-bar/navBar.css
@@ -1,3 +1,8 @@
+li {
+    display: flex;
+    align-items: center
+}
+
 li.active {
     background-color: lightcyan;
 }
@@ -6,6 +11,7 @@ li:not(.active):hover  {
     background-color: white;
 }
 
+/* make the whole area clickable */
 .nav-link {
     padding: 0.5rem 1rem;
 }
