--- a/src/app/app.css
+++ b/src/app/app.css
@@ -22,7 +22,14 @@ h2 {
 
 h3 {
     font-size: 1.5rem;
+    font-weight: bold;
 }
+
+h4 {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
 
 /* table */
 table.data-table {
